5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4061/executions/1706_3055.log
== TEST (2019-04-29 18:39:53) 
-- CODE:
valor = float(input("digite valor: "))
total = valor + gorjeta

#gorjeta1 = valor*0.1
#gorjeta2 = valor*0.09
#gorjeta3 = valor*0.08
#gorjeta4 = valor*0.07

if(valor>= 0 and <=100):
	mensagem = valor*0.1
	elif(valor > 100 and valor <= 200):
		mensagem = valor*0.09
		elif(valor>200 and valor <= 300):
			mensagem = valor*0.08
			else:
				mensagem = valor*0.07

print(mensagem)
-- ERROR:
File "XXXX", line 9
    if(valor>= 0 and <=100):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:40:08) 
-- CODE:
valor = float(input("digite valor: "))
total = valor + gorjeta

#gorjeta1 = valor*0.1
#gorjeta2 = valor*0.09
#gorjeta3 = valor*0.08
#gorjeta4 = valor*0.07

if(valor>= 0 and <=100):
	mensagem = valor*0.1
elif(valor > 100 and valor <= 200):
	mensagem = valor*0.09
		elif(valor>200 and valor <= 300):
			mensagem = valor*0.08
			else:
				mensagem = valor*0.07

print(mensagem)
-- ERROR:
File "XXXX", line 9
    if(valor>= 0 and <=100):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:40:38) 
-- CODE:
valor = float(input("digite valor: "))
#total = valor + gorjeta

#gorjeta1 = valor*0.1
#gorjeta2 = valor*0.09
#gorjeta3 = valor*0.08
#gorjeta4 = valor*0.07

if(valor >= 0 and <= 100):
	mensagem = valor*0.1
elif(valor > 100 and valor <= 200):
	mensagem = valor*0.09
		elif(valor>200 and valor <= 300):
			mensagem = valor*0.08
			else:
				mensagem = valor*0.07

print(mensagem)
-- ERROR:
File "XXXX", line 9
    if(valor >= 0 and <= 100):
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:41:48) 
-- CODE:
valor = float(input("digite valor: "))
#total = valor + gorjeta

#gorjeta1 = valor*0.1
#gorjeta2 = valor*0.09
#gorjeta3 = valor*0.08
#gorjeta4 = valor*0.07

if(valor >= 0 and <= 100):
	mensagem = valor*0.1
else:
	if(valor > 100 and valor <= 200):
	mensagem = valor*0.09
		else:
			if(valor>200 and valor <= 300):
			mensagem = valor*0.08
			else:
				if(valor > 300)
				mensagem = valor*0.07

print(mensagem)
-- ERROR:
File "XXXX", line 9
    if(valor >= 0 and <= 100):
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:44:01) 
-- CODE:
valor = float(input("digite valor: "))
#total = valor + gorjeta

#gorjeta1 = valor*0.1
#gorjeta2 = valor*0.09
#gorjeta3 = valor*0.08
#gorjeta4 = valor*0.07

if(valor >= 0 and <= 100):
	mensagem = valor*0.1
else:
	if(valor > 100 and valor <= 200):
		mensagem = valor*0.09
		else:
			if(valor>200 and valor <= 300):
				mensagem = valor*0.08
			else:
				if(valor > 300):
					mensagem = valor*0.07

print(mensagem)
-- ERROR:
File "XXXX", line 9
    if(valor >= 0 and <= 100):
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:44:39) 
-- CODE:
valor = float(input("digite valor: "))
#total = valor + gorjeta

#gorjeta1 = valor*0.1
#gorjeta2 = valor*0.09
#gorjeta3 = valor*0.08
#gorjeta4 = valor*0.07

if(valor >= 0 and <= 100):
	mensagem = valor*0.1
else:
	if(valor > 100 and valor <= 200):
		mensagem = valor*0.09
	else:
		if(valor>200 and valor <= 300):
			mensagem = valor*0.08
		else:
			if(valor > 300):
				mensagem = valor*0.07

print(mensagem)
-- ERROR:
File "XXXX", line 9
    if(valor >= 0 and <= 100):
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:46:19) 
-- CODE:
valor = float(input("digite valor: "))
#total = valor + gorjeta

#gorjeta1 = valor*0.1
#gorjeta2 = valor*0.09
#gorjeta3 = valor*0.08
#gorjeta4 = valor*0.07

if(valor >= 0 and <= 100):
	mensagem = valor*0.1
	else:
		if(valor > 100 and valor <= 200):
			mensagem = valor*0.09
			else:
				if(valor>200 and valor <= 300):
					mensagem = valor*0.08
					else:
						if(valor > 300):	
							mensagem = valor*0.07

print(mensagem)
-- ERROR:
File "XXXX", line 9
    if(valor >= 0 and <= 100):
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:46:33) 
-- CODE:
valor = float(input("digite valor: "))
#total = valor + gorjeta

#gorjeta1 = valor*0.1
#gorjeta2 = valor*0.09
#gorjeta3 = valor*0.08
#gorjeta4 = valor*0.07

if(valor >= 0 and <= 100):
	mensagem = valor*0.1
	else:
		if(valor > 100 and valor <= 200):
			mensagem = valor*0.09
			else:
				if(valor>200 and valor <= 300):
					mensagem = valor*0.08
					else:
						if(valor > 300):
							mensagem = valor*0.07

print(mensagem)
-- ERROR:
File "XXXX", line 9
    if(valor >= 0 and <= 100):
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:47:14) 
-- CODE:
valor = float(input("digite valor: "))
#total = valor + gorjeta

#gorjeta1 = valor*0.1
#gorjeta2 = valor*0.09
#gorjeta3 = valor*0.08
#gorjeta4 = valor*0.07

if(valor >= 0 and <= 100):
	mensagem = valor*0.1
	else:
		if(valor > 100 and valor <= 200):
			mensagem = valor*0.09
			else:
				if(valor > 200 and valor <= 300):
					mensagem = valor*0.08
					else:
						if(valor > 300):
							mensagem = valor * 0.07

print(mensagem)
-- ERROR:
File "XXXX", line 9
    if(valor >= 0 and <= 100):
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:48:24) 
-- CODE:
valor = float(input("digite valor: "))
#total = valor + gorjeta

#gorjeta1 = valor*0.1
#gorjeta2 = valor*0.09
#gorjeta3 = valor*0.08
#gorjeta4 = valor*0.07

if(valor >= 0 and <= 100):
	mensagem = valor*0.1
	else:
		if(valor > 100 and valor <= 200):
			mensagem = valor*0.09
			else:
				if(valor > 200 and valor <= 300):
					mensagem = valor*0.08
					else:
						if(valor > 300):
							mensagem = valor * 0.07

print(mensagem)
-- ERROR:
File "XXXX", line 9
    if(valor >= 0 and <= 100):
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:49:13) 
-- CODE:
valor = float(input("digite valor: "))
#total = valor + gorjeta

#gorjeta1 = valor*0.1
#gorjeta2 = valor*0.09
#gorjeta3 = valor*0.08
#gorjeta4 = valor*0.07

if(valor >= 0 and <= 100):
	mensagem = valor*0.1
	else:
		if(valor > 100 and valor <= 200):
			mensagem = valor*0.09
			else:
				if(valor > 200 and valor <= 300):
					mensagem = valor * 0.08
					else:
						if(valor > 300):
							mensagem = valor * 0.07

print(mensagem)
-- ERROR:
File "XXXX", line 9
    if(valor >= 0 and <= 100):
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:49:39) 
-- CODE:
valor = float(input("digite valor: "))
#total = valor + gorjeta

#gorjeta1 = valor*0.1
#gorjeta2 = valor*0.09
#gorjeta3 = valor*0.08
#gorjeta4 = valor*0.07

if(valor >= 0 and <= 100):
	mensagem = valor * 0.1
	else:
		if(valor > 100 and valor <= 200):
			mensagem = valor * 0.09
			else:
				if(valor > 200 and valor <= 300):
					mensagem = valor * 0.08
					else:
						if(valor > 300):
							mensagem = valor * 0.07

print(mensagem)
-- ERROR:
File "XXXX", line 9
    if(valor >= 0 and <= 100):
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:49:59) 
-- CODE:
valor = float(input("digite valor: "))
#total = valor + gorjeta

#gorjeta1 = valor*0.1
#gorjeta2 = valor*0.09
#gorjeta3 = valor*0.08
#gorjeta4 = valor*0.07

if(valor >= 0 and <= 100):
	mensagem = valor * 0.1
else:
	if(valor > 100 and valor <= 200):
		mensagem = valor * 0.09
		else:
			if(valor > 200 and valor <= 300):
				mensagem = valor * 0.08
				else:
					if(valor > 300):
						mensagem = valor * 0.07

print(mensagem)
-- ERROR:
File "XXXX", line 9
    if(valor >= 0 and <= 100):
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:50:25) 
-- CODE:
valor = float(input("digite valor: "))
#total = valor + gorjeta

#gorjeta1 = valor*0.1
#gorjeta2 = valor*0.09
#gorjeta3 = valor*0.08
#gorjeta4 = valor*0.07

if(valor >= 0 and <= 100):
	mensagem = valor * 0.1
else:
	if(valor > 100 and valor <= 200):
		mensagem = valor * 0.09
	else:
		if(valor > 200 and valor <= 300):
			mensagem = valor * 0.08
			else:
				if(valor > 300):
					mensagem = valor * 0.07

print(mensagem)
-- ERROR:
File "XXXX", line 9
    if(valor >= 0 and <= 100):
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:51:34) 
-- CODE:
valor = float(input("digite valor: "))
#total = valor + gorjeta

#gorjeta1 = valor*0.1
#gorjeta2 = valor*0.09
#gorjeta3 = valor*0.08
#gorjeta4 = valor*0.07

if(valor >= 0 and <= 100):
	mensagem = valor * 0.1
else:
	if(valor > 100 and valor <= 200):
		mensagem = valor * 0.09
	else:
		if(valor > 200 and valor <= 300):
			mensagem = valor * 0.08
		else:
			if(valor > 300):
				mensagem = valor * 0.07

print(mensagem)
-- ERROR:
File "XXXX", line 9
    if(valor >= 0 and <= 100):
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:52:28) 
-- CODE:
valor = float(input("digite valor: "))
#total = valor + gorjeta

#gorjeta1 = valor*0.1
#gorjeta2 = valor*0.09
#gorjeta3 = valor*0.08
#gorjeta4 = valor*0.07

if(valor >= 0 and <= 100):
	mensagem = valor * 0.1
else:
	if(valor > 100 and valor <= 200):
		mensagem = valor * 0.09
	else:
		if(valor > 200 and valor <= 300):
			mensagem = valor * 0.08
		else:
			if(valor > 300):
				mensagem = valor * 0.07

				
print(mensagem)
-- ERROR:
File "XXXX", line 9
    if(valor >= 0 and <= 100):
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:53:54) 
-- CODE:
valor = float(input("digite valor: "))
#total = valor + gorjeta

#gorjeta1 = valor*0.1
#gorjeta2 = valor*0.09
#gorjeta3 = valor*0.08
#gorjeta4 = valor*0.07

if(valor >= 0 and <= 100):
	mensagem = valor * 0.1
else:
	if(valor > 100 and valor <= 200):
		mensagem = valor * 0.09
	else:
		if(valor > 200 and valor <= 300):
			mensagem = valor * 0.08
		else:
			if(valor > 300):
				mensagem = valor * 0.07

total = mensagem + valor

				
print(round(total, 2)
-- ERROR:
File "XXXX", line 9
    if(valor >= 0 and <= 100):
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
